added backend and made some changes to workflow and docker files

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start": "node ./build/src/index.js",
     "dev": "nodemon ./src/index.ts",
     "build": "tsc -p .",
-    "lint": "eslint ./",
+    "lint": "eslint ",
     "lint:fix": "yarn lint --fix"
   },
   "keywords": [
