added backend and made some changes to workflow and docker files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL=mongodb://127.0.0.1:27017/templatedb?retryWrites=false
 COOKIE_TIME=1
-JWT_SECRET=thissegretisusedbyjwttoken
+JWT_SECRET=taaa
 JWT_EXPIRY=1d
 JWT_PASSWORD_RESET_EXPIRY=15m
 SENDGRID_API_KEY=
