--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,9 +31,11 @@ jobs:
       #   id: datetime
       #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      # - name: Build Docker image
-      #   run: |
-      #     docker compose build
+      - name: Build Docker image
+        run: |
+          sudo mkdir -p /var/envs
+          cp ./.env.example /var/envs/taskflow_backend.env
+          docker compose build
         # docker build -t taskflow/time:${{ steps.datetime.outputs.date }} .
         # docker tag taskflow/time:${{ steps.datetime.outputs.date }} ${{ secrets.DOCKER_USERNAME }}/taskflow:${{ steps.datetime.outputs.date }}
   
@@ -61,9 +63,11 @@ jobs:
       #   id: datetime
       #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      # - name: Build Docker image
-      #   run: |
-      #     docker compose build
+      - name: Build Docker image
+        run: |
+          sudo mkdir -p /var/envs
+          cp ./.env.example /var/envs/taskflow_backend.env
+          docker compose build
         # docker build -t taskflow/time:${{ steps.datetime.outputs.date }} .
         # docker tag taskflow/time:${{ steps.datetime.outputs.date }} ${{ secrets.DOCKER_USERNAME }}/taskflow:${{ steps.datetime.outputs.date }}
 
@@ -82,12 +86,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set date and time variables
-        id: datetime
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      # - name: Set date and time variables
+      #   id: datetime
+      #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       # artifacts can be used to pass the docker image down here
       - name: Build and push Docker image
         run: |
+          sudo mkdir -p /var/envs
+          cp ./.env.example /var/envs/taskflow_backend.env
           docker compose build
           docker compose push
         # docker-compose build -t taskflow/time:${{ steps.datetime.outputs.date }} .
