--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,11 +31,9 @@ jobs:
       #   id: datetime
       #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      - name: Build Docker image
-        run: |
-          sudo mkdir -p /var/envs
-          sudo cp ./.env.example /var/envs/taskflow_backend.env
-          docker compose build
+      # - name: Build Docker image
+      #   run: |
+      #     docker compose build
         # docker build -t taskflow/time:${{ steps.datetime.outputs.date }} .
         # docker tag taskflow/time:${{ steps.datetime.outputs.date }} ${{ secrets.DOCKER_USERNAME }}/taskflow:${{ steps.datetime.outputs.date }}
   
@@ -66,7 +64,7 @@ jobs:
       - name: Build Docker image
         run: |
           sudo mkdir -p /var/envs
-          sudo cp ./.env.example /var/envs/taskflow_backend.env
+          sudo cp .env.example /var/envs/taskflow_backend.env
           docker compose build
         # docker build -t taskflow/time:${{ steps.datetime.outputs.date }} .
         # docker tag taskflow/time:${{ steps.datetime.outputs.date }} ${{ secrets.DOCKER_USERNAME }}/taskflow:${{ steps.datetime.outputs.date }}
@@ -93,7 +91,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           sudo mkdir -p /var/envs
-          sudo cp ./.env.example /var/envs/taskflow_backend.env
+          sudo cp ./backend/.env.example /var/envs/taskflow_backend.env
           docker compose build
           docker compose push
         # docker-compose build -t taskflow/time:${{ steps.datetime.outputs.date }} .
