--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -100,6 +100,25 @@ jobs:
 
       - name: Grant Docker permissions
         run: sudo chmod 666 /var/run/docker.sock
+      - name: SSH into the server and execute command
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            mkdir -p /home/${{ secrets.SERVER_USERNAME }}/sites/taskflow
+
+      - name: SSH into the server and execute command
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "."
+          target: /home/${{ secrets.SERVER_USERNAME }}/sites/taskflow/
+          args: '-r'
+
 
       - name: SSH into the server and execute command
         uses: appleboy/ssh-action@master
@@ -108,11 +127,10 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.SERVER_USERNAME }}/sites/
-            git pull
-            cd Taskflow
-            docker compose stop
-            docker compose down
+            cd /home/${{ secrets.SERVER_USERNAME }}/sites/taskflow
+            docker compose stop 
+            docker compose down 
+            docker compose build
             docker compose up -d
           # docker stop taskflow
           # docker rm taskflow
